--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ polars = "^0.20.31"
 statsforecast = "^1.7.5"
 xlsx2csv = "^0.8.2"
 pandas = "^2.2.2"
+matplotlib = "^3.9.1"
 
 [tool.poetry.scripts]
 vaxstats = "vaxstats.cli:cli_forecasting"
