--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pandas = "^2.2.2"
 matplotlib = "^3.9.1"
 
 [tool.poetry.scripts]
-vaxstats = "vaxstats.cli:cli_forecasting"
+vaxstats = "vaxstats.cli:main"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.0"
@@ -216,10 +216,10 @@ Brotli = "^1.0.9"
 build = "^1.2.1"
 CacheControl = "^0.14.0"
 cachy = "^0.3.0"
-certifi = "^2024.6.2"
+certifi = "^2024.7.4"
 cffi = "^1.16.0"
-cfgv = "^3.3.1"
-charset-normalizer = "^2.0.4"
+cfgv = "^3.4.0"
+charset-normalizer = "^3.3.2"
 cleo = "^2.1.0"
 click = "^8.1.7"
 click-default-group = "^1.2.2"
@@ -232,14 +232,14 @@ cryptography = "^42.0.5"
 distlib = "^0.3.8"
 dulwich = "^0.21.3"
 ensureconda = "^1.4.4"
-fastjsonschema = "^2.19.1"
+fastjsonschema = "^2.20.0"
 filelock = "^3.13.1"
 gitdb = "^4.0.7"
-GitPython = "^3.1.37"
+GitPython = "^3.1.43"
 html5lib = "^1.1"
-identify = "^2.5.36"
+identify = "^2.5.5"
 idna = "^3.7"
-importlib_metadata = "^7.1.0"
+importlib-metadata = "^7.0.1"
 installer = "^0.7.0"
 "jaraco.classes" = "^3.2.1"
 jeepney = "^0.7.1"
@@ -248,12 +248,12 @@ keyring = "^24.3.1"
 MarkupSafe = "^2.1.3"
 more-itertools = "^10.1.0"
 msgpack = "^1.0.3"
-nodeenv = "^1.9.1"
+nodeenv = "^1.7.0"
 numpy = "^1.26.4"
-packaging = "^23.2"
+packaging = "^24.1"
 pastel = "^0.2.1"
-pexpect = "^4.9.0"
-pip = "^24.0"
+pexpect = "^4.8.0"
+pip = "^24.2"
 pkginfo = "^1.10.0"
 platformdirs = "^3.10.0"
 poetry = "^1.8.3"
@@ -266,27 +266,27 @@ pydantic = "^2.5.3"
 pydantic_core = "^2.14.6"
 pylev = "^1.3.0"
 pyOpenSSL = "^24.0.0"
-pyproject_hooks = "^1.1.0"
+pyproject_hooks = "^1.0.0"
 PySocks = "^1.7.1"
 PyYAML = "^6.0.1"
 rapidfuzz = "^3.5.2"
-requests = "^2.32.2"
+requests = "^2.32.3"
 requests-toolbelt = "^1.0.0"
 "ruamel.yaml" = "^0.17.21"
 SecretStorage = "^3.3.1"
-setuptools = "^69.5.1"
-shellingham = "^1.5.4"
+setuptools = "^71.0.4"
+shellingham = "^1.5.0"
 six = "^1.16.0"
 smmap = "^4.0.0"
 tomli = "^2.0.1"
 tomli_w = "^1.0.0"
-tomlkit = "^0.12.5"
+tomlkit = "^0.13.0"
 toolz = "^0.12.0"
-trove-classifiers = "^2024.5.22"
+trove-classifiers = "^2023.10.18"
 typing_extensions = "^4.11.0"
 ukkonen = "^1.0.1"
-urllib3 = "^1.26.18"
+urllib3 = "^1.26.19"
 virtualenv = "^20.26.1"
 webencodings = "^0.5.1"
 wheel = "^0.43.0"
-zipp = "^3.19.2"
+zipp = "^3.17.0"
