--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -47,3 +47,4 @@ jobs:
           env_vars: OS,PYTHON
           fail_ci_if_error: true
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
