--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.11"]
 
     steps:
       - name: Checkout repo
@@ -26,16 +26,7 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
 
-      - name: Initialize conda environment
-        run: make conda-create
-
-      - name: Setup conda
-        run: make conda-setup
-
-      - name: Install conda dependencies
-        run: make from-conda-lock
-
-      - name: Install package dependencies
+      - name: Install package
         run: make install
 
       - name: Run tests
