--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,4 +30,4 @@ jobs:
         run: pip install .
 
       - name: Run tests
-        run: make test
+        run: pytest -c pyproject.toml --cov=vaxstats --cov-report=xml --junit-xml=report.xml --color=yes tests/
