--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install package
-        run: pip install .
+        run: |
+          pip install poetry
+          poetry install --no-interaction --with test
 
       - name: Run tests
         run: pytest -c pyproject.toml --cov=vaxstats --cov-report=xml --junit-xml=report.xml --color=yes tests/
