--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,27 +19,14 @@ jobs:
         with:
           lfs: true
 
-      - name: Install miniconda
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniconda-version: "latest"
-          auto-update-conda: true
-          python-version: "3.12"
+      - name: Install pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
 
-      - name: Initialize conda environment
-        run: make conda-create
+      - name: Setup environment
+        run: pixi install
 
-      - name: Setup conda
-        run: make conda-setup
-
-      - name: Install conda dependencies
-        run: make from-conda-lock
-
-      - name: Install package dependencies
-        run: make install
-
-      - name: Run tests and coverage
-        run: make test
+      - name: Get test coverage
+        run: pixi run tests
 
       - name: Upload to Codecov
         uses: codecov/codecov-action@v4
