--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,25 +11,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install miniconda
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniconda-version: "latest"
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
+      - name: Install pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
 
-      - name: Install package
-        run: |
-          pip install pytest pytest-cov pytest-html coverage colorama
-          pip install .
+      - name: Setup environment
+        run: pixi install
 
       - name: Run tests
-        run: pytest -c pyproject.toml --cov=vaxstats --cov-report=xml --junit-xml=report.xml --color=yes tests/
+        run: pixi run tests
