--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,15 @@ black = { cmd = ["black", "--config", "pyproject.toml", "./content"] }
 format = { depends-on = ["mdlint", "isort", "black"] }
 
 [tool.pixi.dependencies]
-python = ">=3.11.0,<3.13"
+python = ">=3.12.0,<3.13"
 polars = ">=1.12.0,<2"
 loguru = ">=0.7.2,<0.8"
 statsforecast = ">=1.7.8,<2"
 xlsx2csv = ">=0.8.3,<0.9"
 pandas = ">=2.2.3,<3"
 matplotlib = ">=3.9.2,<4"
+pyyaml = ">=6.0.2,<7"
+fastexcel = ">=0.12.0,<0.13"
 
 [tool.pixi.feature.dev.dependencies]
 ruff = ">=0.7.2,<0.8"
