refactor: fix format task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,18 +20,6 @@ docs = ["docs"]
 vaxstats = { path = ".", editable = true }
 
 [tool.pixi.tasks]
-mdlint = { cmd = [
-    "markdownlint-cli2",
-    '"**/*.{md,markdown}"',
-    "--fix",
-    "--config",
-    ".markdownlint.yaml",
-    "||",
-    "true"
-]}
-isort = { cmd = ["isort", "--settings-path", "pyproject.toml", "./content"] }
-black = { cmd = ["black", "--config", "pyproject.toml", "./content"] }
-format = { depends-on = ["mdlint", "isort", "black"] }
 
 [tool.pixi.dependencies]
 python = ">=3.12.0,<3.13"
@@ -58,8 +46,8 @@ pip = ">=24.3.1,<25"
 
 [tool.pixi.feature.dev.tasks]
 mdlint = { cmd = ["markdownlint-cli2", '"**/*.{md,markdown}"', "--fix", "--config", ".markdownlint.yaml", "||", "true"] }
-isort = { cmd = ["isort", "--settings-path", "pyproject.toml", "./content"] }
-black = { cmd = ["black", "--config", "pyproject.toml", "./content"] }
+isort = { cmd = ["isort", "--settings-path", "pyproject.toml", "./vaxstats", "||", "true"] }
+black = { cmd = ["black", "--config", "pyproject.toml", "./vaxstats"] }
 format = { depends-on = ["mdlint", "isort", "black"] }
 tests = { cmd = [
     "pytest",
